# QRScan

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/qrscan/: MainActivity.kt
app/src/main/java/com/github/qrscanlib/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
core/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
qrscan/: build.gradle
qrscan/src/main/: AndroidManifest.xml
qrscanlib/: build.gradle
qrscanlib/libs/: zxingcpp-2.2.0.3.aar
qrscanlib/src/main/: AndroidManifest.xml
qrscanlib/src/main/cpp/: CMakeLists.txt  ZxingCpp.cpp
qrscanlib/src/main/java/com/github/qrscanlib/: Beeps.kt  Intents.java  Mapping.kt  Permissions.kt  QrScanActivity.kt  ScanFeedback.kt  Vibrator.kt  ViewfinderView.java  ZxingCpp.kt
qrscanlib/src/main/res/layout/: activity_qr_scan.xml
qrscanlib/src/main/res/values/: attrs.xml  colors.xml
